# mm-ladder

./: .gitignore  CHANGELOG.md  README.md
backend/: .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml  tox.ini  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0003_add_tournament_is_migrated.py  0004_add_event_count_to_season.py  0005_add_qualifying_type_to_season.py  0006_backfill_qualifying_type_war.py  0007_add_aliases_to_player.py  0008_add_champions_and_cup_qualification.py  0009_add_audit_log.py  0010_add_pod_registration_board.py  0011_add_pod_formats.py  0012_add_eventlink_id_to_tournament.py
backend/docs/superpowers/plans/: 2026-06-08-player-consolidation.md
backend/docs/superpowers/specs/: 2026-06-08-player-consolidation-design.md
backend/migration/: cli.py  consolidation.py  copy_to_pg.py  importer.py  scraper.py  seasons.py  trophies.py  verifier.py
backend/migration/data/: tournament_hashes.json
backend/migration/data/season_10_m19_18-07-07_18-09-28/: 2018-07-09.json  2018-07-16.json  2018-07-23.json  2018-07-30.json  2018-08-06.json  2018-08-13.json  2018-08-20.json  2018-08-27.json  2018-09-03.json  2018-09-10.json  2018-09-17.json  2018-09-24.json
backend/migration/data/season_11_grn_18-09-29_19-01-18/: 2018-10-02.json  2018-10-08.json  2018-10-15.json  2018-10-22.json  2018-10-29.json  2018-11-05.json  2018-11-12.json  2018-11-19.json  2018-11-26.json  (+5 more)
backend/src/mm_ladder/: __init__.py  app.py  auth.py  db.py  db_migrations.py  deps.py  errors.py  logger.py  main.py  scoring.py
backend/tests/: conftest.py  test_admin_auth.py  test_audit_log.py  test_board.py  test_copy_to_pg.py  test_db.py  test_health.py  test_imports.py  test_migration_seasons.py  test_migrations.py  test_player.py  test_player_merge.py  test_players.py  test_schemas.py  test_season.py  test_seasons.py  test_standings.py  test_tournament.py  test_tournament_participant.py  test_tournaments.py  test_upload.py  test_yearly_cup.py  test_yearly_cups.py
backend/tests/migration/: test_consolidation.py  test_importer.py  test_scraper.py  test_seasons.py
backend/tests/models/: test_match.py  test_player.py  test_season.py  test_tournament.py  test_tournament_participant.py  test_yearly_cup.py
backend/tests/services/: test_pdf_import.py  test_player_matching.py
(+621 files in other folders)
