[tool.poetry]
name = "mm-ladder"
version = "0.1.0"
description = "Draft league ladder tracker for Magic Mates Monday"
authors = ["Yoann <yoann.buratti@gmail.com>"]
readme = "README.md"
packages = [{include = "mm_ladder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0"
alembic = "^1.13"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.11"
black = "^24.0"
pyright = "^1.1"
tox = "^4.0"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
