[tool.poetry]
name = "mm-ladder"
version = "0.10.0"
description = "Draft league ladder tracker for Magic Mates Monday"
authors = ["Yoann <yoann.buratti@gmail.com>"]
readme = "README.md"
packages = [{include = "mm_ladder", from = "src"}, {include = "migration"}]

[tool.poetry.scripts]
migrate = "migration.cli:cli"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0"
alembic = "^1.13"
pydantic = "^2.0"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
structlog = "^25.0"
aiosqlite = "^0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.11"
black = "^24.0"
pyright = "^1.1"
tox = "^4.0"
httpx = "^0.28"
pytest-asyncio = "^0.24"

[tool.poetry.group.migration.dependencies]
requests = "^2.31"
click = "^8.0"

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
